# combinatorial_MAB

./: .1k_s1.swp  .1k_s2.swp  .gitignore  CMakeLists.txt  CMakelists.txt  README.md  aws_server.ini  callgrind.out.59321  data_id.map  del  del1  del2  del4  gaussians  h_output  h_output_data  h_output_new  h_output_new_100brute  h_output_newbrute  h_outputbrute  nominal.ini  shannon_nominal.ini  true_distance
cpp/deprecated/: Chow_Liu.cpp  Heirarchical_MAB.cpp  Heirarchical_clustering_brute.cpp  Kmeans_main.cpp  Medoid_10x.cpp  Medoid_Imagenet.cpp  readdata.cpp
cpp/include/: Arms.h  HeirarchicalClustering.h  INIReader.h  Knn.h  Medoid.h  Points.h  Test.h  UCB.h  UCB_dynamic.h  UCB_dynamic_boost.h  kmeans.h  tenXReader.h  utils.h
cpp/lib/: CMakeLists.txt  Points.cpp  ini.c  tenXReader.cpp  utils.cpp
cpp/nndescent_wei/: nndes.h  test_case.cpp
cpp/src/: Entropy_test.cpp  Heirarchical_10x.cpp  Heirarchical_Imagenet.cpp  Heirarchical_MAB.cpp  Heirarchical_clustering.cpp  Heirarchical_clustering_brute.cpp  Kmeans_10x.cpp  Kmeans_Imagenet.cpp  Kmeans_main.cpp  Knn.h  Knn_10x.cpp  Knn_Glove.cpp  Knn_Imagenet.cpp  Knn_main.cpp  Knn_main_10x.cpp  MI_test.cpp  MMI_GasSensorDataset.cpp  MMI_test.cpp  Medoid_10x.cpp  Medoid_Imagenet.cpp  Medoid_main.cpp  Points.cpp  main_app.cpp  readdata.cpp  test.cpp
cpp/utilities/: CMakeLists.txt  INIReader.cpp  ini.h
experiments/MI/GreenhouseGas/: 290n_1001_d_2950  290n_1501_d_2950  290n_2001_d_2950  290n_2501_d_2950  290n_3001_d_2950  290n_3501_d_2950  290n_4001_d_2950  290n_4578_d_1000  290n_4578_d_1500  290n_4578_d_2000  290n_4578_d_2500  290n_4578_d_2950  290n_4578_d_500  290n_501_d_2950  295n_1001_d_2950  295n_1501_d_2950  295n_2001_d_2950  295n_2501_d_2950  295n_3001_d_2950  295n_3501_d_2950  295n_4001_d_2950  295n_4578_d_1000  295n_4578_d_1500  295n_4578_d_2000  295n_4578_d_2500  295n_4578_d_2950  295n_4578_d_500  295n_501_d_2950  301n_1001_d_2950  301n_1501_d_2950  301n_2001_d_2950  301n_2501_d_2950  301n_3001_d_2950  301n_3501_d_2950  301n_4001_d_2950  301n_4578_d_1000  301n_4578_d_1500  301n_4578_d_2000  301n_4578_d_2500  301n_4578_d_2950  (+76 more)
experiments/heirarchical/imagenet/: data_101n_10000_d_768  data_101n_1000_d_12288  data_258n_10000_d_1728  data_258n_10000_d_4800  data_258n_10000_d_6912  data_290n_10000_d_768  data_290n_8000_d_12288  data_366n_10000_d_12288  data_383n_100_d_3072  data_383n_100_d_768  data_445n_1000_d_12288  data_487n_10000_d_12288  data_505n_10000_d_12288  data_505n_10000_d_3072  data_505n_10000_d_4800  data_505n_6000_d_12288  data_505n_8000_d_12288  data_511n_10000_d_1728  data_511n_10000_d_4800  data_511n_10000_d_6912  data_541n_2000_d_12288  data_5n_10000_d_12288  data_640n_10000_d_4800  data_640n_10000_d_6912  data_640n_10000_d_9408  data_65n_10000_d_12288  data_65n_10000_d_1728  data_65n_10000_d_3072  data_65n_10000_d_4800  data_65n_10000_d_768  data_65n_10000_d_9408  data_65n_4000_d_12288  data_65n_8000_d_12288  data_675n_4000_d_12288  data_677n_10000_d_12288  data_677n_10000_d_1728  data_677n_10000_d_768  data_677n_6000_d_12288  data_68n_8000_d_12288  data_75n_4000_d_12288  (+127 more)
experiments/kgraph/: imagenet_d16_n10000.txt  imagenet_d16_n100000.txt  imagenet_d16_n20000.txt  imagenet_d16_n30000.txt  imagenet_d16_n40000.txt  imagenet_d16_n50000.txt  imagenet_d16_n60000.txt  imagenet_d16_n70000.txt  imagenet_d16_n80000.txt  imagenet_d16_n90000.txt  imagenet_d24_n100000.txt  imagenet_d32_n100000.txt  imagenet_d40_n100000.txt  imagenet_d48_n100000.txt  imagenet_d56_n100000.txt  imagenet_d64_n10000.txt  imagenet_d64_n100000.txt  imagenet_d64_n20000.txt  imagenet_d64_n30000.txt  imagenet_d64_n40000.txt  imagenet_d64_n50000.txt  imagenet_d64_n60000.txt  imagenet_d64_n70000.txt  imagenet_d64_n80000.txt  imagenet_d64_n90000.txt
experiments/kmeans/10x/: n_10000_d_27998_k_100  n_1000_d_27998_k_100  n_20000_d_27998_k_100  n_2000_d_27998_k_100  n_25000_d_27998_k_100  n_2500_d_27998_k_100  (+2 more)
experiments/knn/: 10x_n_10k_avgpull  10x_n_2.5k_avgpull  10x_n_20k_avgpull  10x_n_30k_avgpull  10x_n_5k_avgpull  all_pulls_example  imagenet_d16_n_100k_avgpull  imagenet_d24_n_100k_avgpull  imagenet_d32_n_100k_avgpull  imagenet_d40_n_100k_avgpull  imagenet_d48_n_100k_avgpull  imagenet_d56_n_100k_avgpull  imagenet_d64_n_100k_avgpull  imagenet_d64_n_10k_avgpull  imagenet_d64_n_20k_avgpull  imagenet_d64_n_30k_avgpull  imagenet_d64_n_40k_avgpull  imagenet_d64_n_50k_avgpull  imagenet_d64_n_60k_avgpull  imagenet_d64_n_70k_avgpull  imagenet_d64_n_80k_avgpull  imagenet_d64_n_90k_avgpull
experiments/nndescent/: Curve_n_100000_d_12288_k_5_S_12  Curve_n_100000_d_12288_k_5_S_14  Curve_n_100000_d_12288_k_5_S_16  Curve_n_100000_d_12288_k_5_S_18  Curve_n_100000_d_12288_k_5_S_6  Curve_n_100000_d_12288_k_5_S_8  Curve_n_100000_d_768_k_5_S_6  Curve_n_10000_d_12288_k_5_S_12  Curve_n_10000_d_12288_k_5_S_14  Curve_n_10000_d_12288_k_5_S_16  Curve_n_10000_d_12288_k_5_S_18  Curve_n_10000_d_12288_k_5_S_6  Curve_n_10000_d_12288_k_5_S_8  Curve_n_10000_d_768_k_5_S_12  Curve_n_10000_d_768_k_5_S_14  Curve_n_10000_d_768_k_5_S_16  Curve_n_10000_d_768_k_5_S_18  Curve_n_10000_d_768_k_5_S_4  Curve_n_10000_d_768_k_5_S_5  Curve_n_10000_d_768_k_5_S_6  Curve_n_10000_d_768_k_5_S_7  Curve_n_10000_d_768_k_5_S_8  Curve_n_20000_d_12288_k_5_S_12  Curve_n_20000_d_12288_k_5_S_14  Curve_n_20000_d_12288_k_5_S_16  Curve_n_20000_d_12288_k_5_S_18  Curve_n_20000_d_12288_k_5_S_6  Curve_n_20000_d_12288_k_5_S_8  Curve_n_20000_d_768_k_5_S_12  Curve_n_20000_d_768_k_5_S_14  Curve_n_20000_d_768_k_5_S_16  Curve_n_20000_d_768_k_5_S_18  Curve_n_20000_d_768_k_5_S_6  Curve_n_20000_d_768_k_5_S_8  Curve_n_30000_d_12288_k_5_S_12  Curve_n_30000_d_12288_k_5_S_14  Curve_n_30000_d_12288_k_5_S_16  Curve_n_30000_d_12288_k_5_S_18  Curve_n_30000_d_12288_k_5_S_6  Curve_n_30000_d_12288_k_5_S_8  (+63 more)
python/: Heirarchical.ipynb  Rand - Knn.ipynb  Untitled.ipynb  h_output_min  k-nn - Imagenet.ipynb  knn.ipynb  memview_bench-single-Copy1.ipynb  memview_bench-single.ipynb  memview_bench.ipynb  my_cython.pyx  run.py  utils.py
sample_datasets/sample_10x/: 1M_neurons_matrix_1k_cells.h5
utils/: build.sh  update.sh
(+19 files in other folders)
